--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,62 +1,118 @@
-
 .large-hero{
-    position: relative;
+	position: relative;
+	
+	&__title{
+	font-size: 1rem;
+	font-weight: 600;
+	text-transform: capitalize;
+	letter-spacing: 0.5px;
+	color: $steelBlue;
+		
+		@mixin smallScreen{
+			font-size: 1.2875rem;
+		}
+		@mixin mediumScreen{
+			text-transform: uppercase;
+		}
+		@mixin extraLargeScreen{
+			font-size: 2.15rem;
+			font-weight: 900;
+		}
+	}
+	&__text-content{
+	position: absolute;
+	left: 7%;
+	top: 45%;
+	transform: translateY(-50%);
+	
+		@mixin extraLargeScreen{
+			left: 10%;
+			top: 45%;
+		}	
+		
+	&__strip-title{
+	padding: 0.75rem 1.25rem;
+	border-radius: 0.375rem 0.375rem 0 0;
+	background-color: $mainBlue;
+	display: inline-block;
+	text-transform: uppercase;
+	color: $white;
+	letter-spacing: 1px;
+	font-weight: 900;
+	font-size: 0.7rem;
+	margin-bottom: 0;
+		@mixin mediumScreen{
+			padding: 1rem 1.8rem;
+		}
+		@mixin largeScreen{
+			padding: 1.25rem 2.5rem;
+			font-size: 0.85rem;
+		}
+		
 
-    &__title{
-        font-size: 2.15rem;
-        font-weight: 900;
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
-        color: #004861;
-    }
-
-    &__text-content{
-        position: absolute;
-        top: 35%;
-        transform: translateY(-50%);
-        left: 10%;
-    
-        &__strip-title{
-            padding: 1.25rem 2.5rem;
-            border-radius: 0.375rem 0.375rem 0 0;
-            background-color: $mainBlue;
-            display: inline-block;
-            text-transform: uppercase;
-            color: $white;
-            letter-spacing: 1px;
-            font-weight: 900;
-            font-size: 0.85rem;
-            margin-bottom: 0;
-        }
-
-        &__text{
-            background-color: $white;
-            padding: 3.125rem 2.5rem;
-            width: 50%;
-            border-radius: 0 6px 6px;
-        }
-    }
-
-    & __subtitle{
-        font-size: 1.75rem;
-        line-height: 1;
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
-        margin-top: 0;
-        margin-bottom: 10px;
-        color: $steelBlue;
-    }
-
-    & __feature-list{
-        list-style: circle;
-        margin-left: -1.3rem;
-        color: $grey;
-    
-
-        &__item{
-            line-height: 1.5;
-            margin-bottom: 0.625rem;
-        }
-    }
-    
+	}
+		
+	&__text{
+	background-color: $white;
+	padding: 1rem 0.85rem;
+	width: 50%;
+	border-radius: 0 6px 6px 6px;
+		@mixin mediumScreen{
+			padding: 1.5rem 1.3rem;
+			}
+		@mixin extraLargeScreen{
+			padding: 3.125rem 2.5rem;
+			}
+		}
+	}
+	
+	&__subtitle{
+	font-size: 1rem;
+	font-weight: 300;
+	line-height: 1;
+	text-transform: capitalize;
+	letter-spacing: 0.5px;
+	margin-top: 0;
+	margin-bottom: 0.625rem;
+	color: $steelBlue;
+		@mixin smallScreen{
+			font-size: 1.25rem;
+		}
+		@mixin mediumScreen{
+			font-size: 1.5rem;
+			text-transform: uppercase;
+		}
+		@mixin largeScreen{
+			font-size: 1.75rem;
+		}
+		@mixin extraLargeScreen{
+			font-size: 2rem;
+		}
+	}
+	
+	&__feature-list{
+	list-style: circle;
+	margin-left: -1.3rem;
+	color: $darkGrey;
+	display: none;
+		
+		@mixin smallScreen{
+			display: block;
+			font-size: 0.8rem;
+		}
+		@mixin mediumScreen{
+			color: $grey;
+			font-size: 1rem;
+		}
+	
+	&__item{
+	line-height: 1.3;
+	margin-bottom: 0.625rem;
+		@mixin mediumScreen{
+			line-height: 1.5;
+		}
+	}
+	}
+	
 }
+
