Completed Configuration of webpack.config.js for deployment and completed the website

--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -4,7 +4,7 @@
     z-index: 999;
     background-color: $white;
     width: 100%;
-    transition: all 450ms ease-in-out;
+    transition: all 458ms ease-in-out;
     box-shadow: 0 0 2px rgba(50, 50, 50, 0.4);
     &-logo-block {
         text-align: center;
@@ -36,23 +36,88 @@
     &:hover {
         color: $mainBlue;
     }
+    &.active {
+        color: $mainBlue;
+    }
 }
 
 .menu-content {
     display: none;
-    @mixin mediumScreen {
+    @mixin largeScreen {
         display: block;
     }
 }
 
 .mobile-header-icon {
     position: absolute;
+    cursor: pointer;
     width: 20px;
-    height: 20px;
-    background-color: $mainBlue;
-    top: 30px;
+    height: 19px;
+    /* background-color: $lightGrey; */
+    top: 50px;
     right: 30px;
     @mixin largeScreen {
         display: none;
+    }
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 20px;
+        height: 3px;
+        background: $mainBlue;
+        transform-origin: 0 0;
+        transition: transform .3s ease-out;
+    }
+    &-bar {
+        content: "";
+        position: absolute;
+        top: 8px;
+        left: 0;
+        width: 20px;
+        height: 3px;
+        background: $mainBlue;
+        transform-origin: 0 50%;
+        transition: all .3s ease-out;
+    }
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 20px;
+        height: 3px;
+        background: $mainBlue;
+        transform-origin: 0 100%;
+        transition: transform .3s ease-out;
+    }
+    &-close {
+        &::before {
+            transform: rotate(45deg) scaleX(1.25);
+        }
+        .mobile-header-icon-bar {
+            transform: scaleX(0);
+            opactiy: 0;
+        }
+        &::after {
+            transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+        }
+    }
+}
+
+.mobile-menu {
+    opacity: 0;
+    display: none;
+    &-active {
+        opacity: 1;
+        display: block;
+    }
+    &-list {
+        list-style: none;
+        padding: 0;
+        &-item {
+            border-top: solid 1px $lightGrey;
+        }
     }
 }
