--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -4,19 +4,27 @@
 *  M = Modifier (They are the event which comes on thenevent and goes on the event)
 */
 
-body{
-    font-family: 'Roboto',sans-serif;
+body {
+    font-family: 'Roboto', sans-serif;
     color: #333;
     font-weight: 300;
+    overflow-x: hidden;
 }
 
-img{
+img {
     max-width: 100%;
     height: auto;
 }
-h1,h2,h3,h4,h5,h6{
-    font-family: 'Lato',sans-serif;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Lato', sans-serif;
 }
-a{
+
+a {
     text-decoration: none;
 }
