--- a/app/assets/styles/modules/_helper.css
+++ b/app/assets/styles/modules/_helper.css
@@ -1,38 +1,41 @@
-.section{
+.section {
     padding: 80px 0;
-
-    &-bg-light{
+    &-bg-light {
         background-color: $lightGrey;
     }
-    &-bg-blue{
+    &-bg-blue {
         background-color: $mainBlue;
     }
 }
 
-.d-block{
+.d-block {
     display: block;
 }
 
-.text-center{
+.text-center {
     text-align: center;
 }
-.text-left{
+
+.text-left {
     text-align: left;
 }
-.text-right{
+
+.text-right {
     text-align: right;
 }
-.text-justify{
+
+.text-justify {
     text-align: justify;
 }
 
-.p-b-0{
-    padding-bottom: 0;
-}
-.m-t-35{
-    margin-top: 35px;
-}
-.m-b-15{
-    margin-bottom: 15px;
+.p-b-0 {
+    padding-bottom: 0!important;
 }
 
+.m-t-35 {
+    margin-top: 35px;
+}
+
+.m-b-15 {
+    margin-bottom: 15px;
+}
