--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -25,3 +25,7 @@
 @import "modules/_testimonial.css";
 @import "modules/_footer.css";
 @import "modules/_header.css";
+@import "modules/_reveal-item.css";
+@import "modules/_modal.css";
+@import "modules/_form.css";
+@import "modules/_contact-box.css"
